Cleanup code for post Java 8 compile
Signed-off-by: John Eberhard <jeber@us.ibm.com>