@@ -258,9 +258,9 @@ public class JDCSSetArray extends JDCSSetTestcase
 
         java.sql.Array a = null;
 	Integer[] ia = new Integer[3];
-	ia[0] = new Integer(0);
-	ia[1] = new Integer(100);
-	ia[2] = new Integer(200);
+	ia[0] = Integer.valueOf(0);
+	ia[1] = Integer.valueOf(100);
+	ia[2] = Integer.valueOf(200);
         try{
 
 
@@ -1105,10 +1105,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 	    ////////create array and set/get data
 	    //check local copy of array and arrayResultSet
 		Integer[] ia = new Integer[4];
-		ia[0] = new Integer(0);
-		ia[1] = new Integer(100);
-		ia[2] = new Integer(200);
-		ia[3] = new Integer(300);
+		ia[0] = Integer.valueOf(0);
+		ia[1] = Integer.valueOf(100);
+		ia[2] = Integer.valueOf(200);
+		ia[3] = Integer.valueOf(300);
 		java.sql.Array a = createArray(connection_,  "INTEGER", ia);
 
 
@@ -1140,10 +1140,10 @@ public class JDCSSetArray extends JDCSSetTestcase
             //check local copy of array and arrayResultSet
             boolean check1 = true;
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer(0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf(0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "INTEGER", ia);
 
             java.sql.ResultSet retRS = a.getResultSet();
@@ -1218,10 +1218,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Object[] ia = new Object[4];
-            ia[0] = new Integer(0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf(0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "SMALLINT", ia);
 
             //call proc to revers 4 elements in array
@@ -1267,7 +1267,7 @@ public class JDCSSetArray extends JDCSSetTestcase
 		Integer[] intArray =  (Integer[]) ia;
 		ia = new Short[intArray.length];
 		for (int i = 0; i < intArray.length; i++) {
-		    ia[i] = new Short(intArray[i].shortValue());
+		    ia[i] = Short.valueOf(intArray[i].shortValue());
 		}
 
 	    } else {
@@ -1300,10 +1300,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer( 0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf( 0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "INTEGER", ia);
 
             //call proc to revers 4 elements in array
@@ -1358,10 +1358,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
         //////// create array and set/get data
         Long[] ia = new Long[4];
-        ia[0] = new Long(0);
-        ia[1] = new Long(100);
-        ia[2] = new Long(200);
-        ia[3] = new Long(300);
+        ia[0] = Long.valueOf(0);
+        ia[1] = Long.valueOf(100);
+        ia[2] = Long.valueOf(200);
+        ia[3] = Long.valueOf(300);
         java.sql.Array a = createArray(connection_, "BIGINT", ia);
 
         // call proc to revers 4 elements in array
@@ -1430,10 +1430,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Float[] ia = new Float[4];
-            ia[0] = new Float((float)0);
-            ia[1] = new Float((float)100.1);
-            ia[2] = new Float((float)200.2);
-            ia[3] = new Float((float)300.3);
+            ia[0] = Float.valueOf((float)0);
+            ia[1] = Float.valueOf((float)100.1);
+            ia[2] = Float.valueOf((float)200.2);
+            ia[3] = Float.valueOf((float)300.3);
             //???real is valid??(it is a i5 type, but luw does not seem to like it)
             //C.createArrayOf("REAL) returns "INTEGER" as type flag (no big deal)
             //but when selected, the type is "REAL"   probably luw bug
@@ -1490,10 +1490,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Double[] ia = new Double[4];
-            ia[0] = new Double(0);
-            ia[1] = new Double((double)((float)100.1));
-            ia[2] = new Double((double)((float)200.2));
-            ia[3] = new Double((double)((float)300.3));
+            ia[0] = Double.valueOf(0);
+            ia[1] = Double.valueOf((double)((float)100.1));
+            ia[2] = Double.valueOf((double)((float)200.2));
+            ia[3] = Double.valueOf((double)((float)300.3));
 	    String baseTypeName = "FLOAT";
             java.sql.Array a;
 	    if (getDriver() == JDTestDriver.DRIVER_JCC) {
@@ -1559,10 +1559,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Double[] ia = new Double[4];
-            ia[0] = new Double(0);
-            ia[1] = new Double(100.1);
-            ia[2] = new Double(200.2);
-            ia[3] = new Double(300.3);
+            ia[0] = Double.valueOf(0);
+            ia[1] = Double.valueOf(100.1);
+            ia[2] = Double.valueOf(200.2);
+            ia[3] = Double.valueOf(300.3);
             java.sql.Array a = createArray(connection_, "DOUBLE", ia);
 
             //call proc to revers 4 elements in array
@@ -2636,17 +2636,17 @@ public class JDCSSetArray extends JDCSSetTestcase
             reconnect();
             ////////create array and set/get data
             Integer[] ia1 = new Integer[4];
-            ia1[0] = new Integer( 0);
-            ia1[1] = new Integer(1);
-            ia1[2] = new Integer(2);
-            ia1[3] = new Integer(3);
+            ia1[0] = Integer.valueOf( 0);
+            ia1[1] = Integer.valueOf(1);
+            ia1[2] = Integer.valueOf(2);
+            ia1[3] = Integer.valueOf(3);
             java.sql.Array a1 = createArray(connection_, "INTEGER", ia1);
 
             Integer[] ia2 = new Integer[4];
-            ia2[0] = new Integer( 0);
-            ia2[1] = new Integer(100);
-            ia2[2] = new Integer(200);
-            ia2[3] = new Integer(300);
+            ia2[0] = Integer.valueOf( 0);
+            ia2[1] = Integer.valueOf(100);
+            ia2[2] = Integer.valueOf(200);
+            ia2[3] = Integer.valueOf(300);
             java.sql.Array a2 = createArray(connection_, "INTEGER", ia2);
 
             //call proc   (in array, in int, inout array, inout int, out array, out int)
@@ -2784,10 +2784,10 @@ public class JDCSSetArray extends JDCSSetTestcase
             reconnect();
             ////////create array and set/get data
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer( 0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf( 0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             String[] ias = new String[4];
             ias[0] = "0";
             ias[1] = "100";
@@ -2845,10 +2845,10 @@ public class JDCSSetArray extends JDCSSetTestcase
             reconnect();
             ////////create array and set/get data
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer( 0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf( 0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             String[] ias = new String[4];
             ias[0] = "0";
             ias[1] = "100";
@@ -2938,10 +2938,10 @@ public class JDCSSetArray extends JDCSSetTestcase
             ////////create array and set/get data
             //check local copy of array and arrayResultSet
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer(0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf(0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_,  "INTEGER", ia);
 
 
@@ -3468,7 +3468,7 @@ public class JDCSSetArray extends JDCSSetTestcase
         try{
 	    assureProcedureExists(JDSetupProcedure.STP_CSARRINT4 );
             reconnect();
-            Integer[] ia = { new Integer(1), new Integer(2), new Integer(3), new Integer(4), new Integer(5), new Integer(6)};
+            Integer[] ia = { Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(3), Integer.valueOf(4), Integer.valueOf(5), Integer.valueOf(6)};
 
             CallableStatement cs = connection_.prepareCall("call " + JDSetupProcedure.STP_CSARRINT4 + " ( ?, ?) ");
             cs.setInt(1, 1);
@@ -3517,10 +3517,10 @@ public class JDCSSetArray extends JDCSSetTestcase
             //check local copy of array and arrayResultSet
             boolean check1 = true;
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer(0);
+            ia[0] = Integer.valueOf(0);
             ia[1] = null;
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "INTEGER", ia);
 
             java.sql.ResultSet retRS = a.getResultSet();
@@ -3604,10 +3604,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer(0);
-            ia[1] = new Integer(100);
+            ia[0] = Integer.valueOf(0);
+            ia[1] = Integer.valueOf(100);
             ia[2] = null;
-            ia[3] = new Integer(300);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "SMALLINT", ia);
 
             //call proc to revers 4 elements in array
@@ -3661,10 +3661,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer( 0);
-            ia[1] = new Integer(100);
+            ia[0] = Integer.valueOf( 0);
+            ia[1] = Integer.valueOf(100);
             ia[2] = null;
-            ia[3] = new Integer(300);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "INTEGER", ia);
 
             //call proc to revers 4 elements in array
@@ -3713,10 +3713,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Long[] ia = new Long[4];
-            ia[0] = new Long( 0);
+            ia[0] = Long.valueOf( 0);
             ia[1] = null;
-            ia[2] = new Long( 200);
-            ia[3] = new Long( 300);
+            ia[2] = Long.valueOf( 200);
+            ia[3] = Long.valueOf( 300);
             java.sql.Array a = createArray(connection_, "BIGINT", ia);
 
             //call proc to revers 4 elements in array
@@ -3767,9 +3767,9 @@ public class JDCSSetArray extends JDCSSetTestcase
             ////////create array and set/get data
             Float[] ia = new Float[4];
             ia[0] = null;
-            ia[1] = new Float((float)100.1);
-            ia[2] = new Float((float)200.2);
-            ia[3] = new Float((float)300.3);
+            ia[1] = Float.valueOf((float)100.1);
+            ia[2] = Float.valueOf((float)200.2);
+            ia[3] = Float.valueOf((float)300.3);
             //???real is valid??(it is a i5 type, but luw does not seem to like it)
             //C.createArrayOf("REAL) returns "INTEGER" as type flag (no big deal)
             //but when selected, the type is "REAL"   probably luw bug
@@ -3823,9 +3823,9 @@ public class JDCSSetArray extends JDCSSetTestcase
             ////////create array and set/get data
             Double[] ia = new Double[4];
             ia[0] = null;
-            ia[1] = new Double((double)((float)100.1));
-            ia[2] = new Double((double)((float)200.2));
-            ia[3] = new Double((double)((float)300.3));
+            ia[1] = Double.valueOf((double)((float)100.1));
+            ia[2] = Double.valueOf((double)((float)200.2));
+            ia[3] = Double.valueOf((double)((float)300.3));
             java.sql.Array a;
 	    String baseTypeName = "FLOAT";
 	    if (getDriver() == JDTestDriver.DRIVER_JCC) {
@@ -3889,9 +3889,9 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Double[] ia = new Double[4];
-            ia[0] = new Double(0);
-            ia[1] = new Double(100.1);
-            ia[2] = new Double(200.2);
+            ia[0] = Double.valueOf(0);
+            ia[1] = Double.valueOf(100.1);
+            ia[2] = Double.valueOf(200.2);
             ia[3] = null;
             java.sql.Array a = createArray(connection_, "DOUBLE", ia);
 
@@ -6237,7 +6237,7 @@ public class JDCSSetArray extends JDCSSetTestcase
 		Integer[] intArray =  (Integer[]) ia;
 		ia = new Short[intArray.length];
 		for (int i = 0; i < intArray.length; i++) {
-		    ia[i] = new Short(intArray[i].shortValue());
+		    ia[i] = Short.valueOf(intArray[i].shortValue());
 		}
 
 	    } else {
@@ -7543,10 +7543,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 	    ////////create array and set/get data
 	    //check local copy of array and arrayResultSet
 		Integer[] ia = new Integer[4];
-		ia[0] = new Integer(0);
-		ia[1] = new Integer(100);
-		ia[2] = new Integer(200);
-		ia[3] = new Integer(300);
+		ia[0] = Integer.valueOf(0);
+		ia[1] = Integer.valueOf(100);
+		ia[2] = Integer.valueOf(200);
+		ia[3] = Integer.valueOf(300);
 		java.sql.Array a = createArray(connection_,  "INTEGER", ia);
 
 
@@ -7580,10 +7580,10 @@ public class JDCSSetArray extends JDCSSetTestcase
             //check local copy of array and arrayResultSet
             boolean check1 = true;
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer(0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf(0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "INTEGER", ia);
 
             java.sql.ResultSet retRS = a.getResultSet();
@@ -7666,10 +7666,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Object[] ia = new Object[4];
-            ia[0] = new Integer(0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf(0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "SMALLINT", ia);
 
             //call proc to revers 4 elements in array
@@ -7708,7 +7708,7 @@ public class JDCSSetArray extends JDCSSetTestcase
 		Integer[] intArray =  (Integer[]) ia;
 		ia = new Short[intArray.length];
 		for (int i = 0; i < intArray.length; i++) {
-		    ia[i] = new Short(intArray[i].shortValue());
+		    ia[i] = Short.valueOf(intArray[i].shortValue());
 		}
 
 	    } else {
@@ -7741,10 +7741,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer( 0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf( 0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "INTEGER", ia);
 
             //call proc to revers 4 elements in array
@@ -7796,10 +7796,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Long[] ia = new Long[4];
-            ia[0] = new Long( 0);
-            ia[1] = new Long( 100);
-            ia[2] = new Long( 200);
-            ia[3] = new Long( 300);
+            ia[0] = Long.valueOf( 0);
+            ia[1] = Long.valueOf( 100);
+            ia[2] = Long.valueOf( 200);
+            ia[3] = Long.valueOf( 300);
             java.sql.Array a = createArray(connection_, "BIGINT", ia);
 
             //call proc to revers 4 elements in array
@@ -7858,10 +7858,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Float[] ia = new Float[4];
-            ia[0] = new Float((float)0);
-            ia[1] = new Float((float)100.1);
-            ia[2] = new Float((float)200.2);
-            ia[3] = new Float((float)300.3);
+            ia[0] = Float.valueOf((float)0);
+            ia[1] = Float.valueOf((float)100.1);
+            ia[2] = Float.valueOf((float)200.2);
+            ia[3] = Float.valueOf((float)300.3);
             //???real is valid??(it is a i5 type, but luw does not seem to like it)
             //C.createArrayOf("REAL) returns "INTEGER" as type flag (no big deal)
             //but when selected, the type is "REAL"   probably luw bug
@@ -7913,10 +7913,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Double[] ia = new Double[4];
-            ia[0] = new Double(0);
-            ia[1] = new Double((double)((float)100.1));
-            ia[2] = new Double((double)((float)200.2));
-            ia[3] = new Double((double)((float)300.3));
+            ia[0] = Double.valueOf(0);
+            ia[1] = Double.valueOf((double)((float)100.1));
+            ia[2] = Double.valueOf((double)((float)200.2));
+            ia[3] = Double.valueOf((double)((float)300.3));
 	    String baseTypeName = "FLOAT";
             java.sql.Array a;
 	    if (getDriver() == JDTestDriver.DRIVER_JCC) {
@@ -7978,10 +7978,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Double[] ia = new Double[4];
-            ia[0] = new Double(0);
-            ia[1] = new Double(100.1);
-            ia[2] = new Double(200.2);
-            ia[3] = new Double(300.3);
+            ia[0] = Double.valueOf(0);
+            ia[1] = Double.valueOf(100.1);
+            ia[2] = Double.valueOf(200.2);
+            ia[3] = Double.valueOf(300.3);
             java.sql.Array a = createArray(connection_, "DOUBLE", ia);
 
             //call proc to revers 4 elements in array
@@ -8957,17 +8957,17 @@ public class JDCSSetArray extends JDCSSetTestcase
             reconnect();
             ////////create array and set/get data
             Integer[] ia1 = new Integer[4];
-            ia1[0] = new Integer( 0);
-            ia1[1] = new Integer(1);
-            ia1[2] = new Integer(2);
-            ia1[3] = new Integer(3);
+            ia1[0] = Integer.valueOf( 0);
+            ia1[1] = Integer.valueOf(1);
+            ia1[2] = Integer.valueOf(2);
+            ia1[3] = Integer.valueOf(3);
             java.sql.Array a1 = createArray(connection_, "INTEGER", ia1);
 
             Integer[] ia2 = new Integer[4];
-            ia2[0] = new Integer( 0);
-            ia2[1] = new Integer(100);
-            ia2[2] = new Integer(200);
-            ia2[3] = new Integer(300);
+            ia2[0] = Integer.valueOf( 0);
+            ia2[1] = Integer.valueOf(100);
+            ia2[2] = Integer.valueOf(200);
+            ia2[3] = Integer.valueOf(300);
             java.sql.Array a2 = createArray(connection_, "INTEGER", ia2);
 
             //call proc   (in array, in int, inout array, inout int, out array, out int)
@@ -9139,10 +9139,10 @@ public class JDCSSetArray extends JDCSSetTestcase
             reconnect();
             ////////create array and set/get data
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer( 0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf( 0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             String[] ias = new String[4];
             ias[0] = "0";
             ias[1] = "100";
@@ -9202,10 +9202,10 @@ public class JDCSSetArray extends JDCSSetTestcase
             reconnect();
             ////////create array and set/get data
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer( 0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf( 0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             String[] ias = new String[4];
             ias[0] = "0";
             ias[1] = "100";
@@ -9299,10 +9299,10 @@ public class JDCSSetArray extends JDCSSetTestcase
             ////////create array and set/get data
             //check local copy of array and arrayResultSet
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer(0);
-            ia[1] = new Integer(100);
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[0] = Integer.valueOf(0);
+            ia[1] = Integer.valueOf(100);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_,  "INTEGER", ia);
 
 
@@ -9829,7 +9829,7 @@ public class JDCSSetArray extends JDCSSetTestcase
 	    assureProcedureExists(JDSetupProcedure.STP_CSARRINT4 );
             reconnect();
             Integer[] ia = {
-		new Integer(1), new Integer(2), new Integer(3), new Integer(4), new Integer(5), new Integer(6)};
+		Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(3), Integer.valueOf(4), Integer.valueOf(5), Integer.valueOf(6)};
 
             CallableStatement cs = connection_.prepareCall("call " + JDSetupProcedure.STP_CSARRINT4 + " ( ?, ?) ");
             cs.setInt(1, 2);
@@ -9875,10 +9875,10 @@ public class JDCSSetArray extends JDCSSetTestcase
             //check local copy of array and arrayResultSet
             boolean check1 = true;
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer(0);
+            ia[0] = Integer.valueOf(0);
             ia[1] = null;
-            ia[2] = new Integer(200);
-            ia[3] = new Integer(300);
+            ia[2] = Integer.valueOf(200);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "INTEGER", ia);
 
             java.sql.ResultSet retRS = a.getResultSet();
@@ -9965,10 +9965,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer(0);
-            ia[1] = new Integer(100);
+            ia[0] = Integer.valueOf(0);
+            ia[1] = Integer.valueOf(100);
             ia[2] = null;
-            ia[3] = new Integer(300);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "SMALLINT", ia);
 
             //call proc to revers 4 elements in array
@@ -10021,10 +10021,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Integer[] ia = new Integer[4];
-            ia[0] = new Integer( 0);
-            ia[1] = new Integer(100);
+            ia[0] = Integer.valueOf( 0);
+            ia[1] = Integer.valueOf(100);
             ia[2] = null;
-            ia[3] = new Integer(300);
+            ia[3] = Integer.valueOf(300);
             java.sql.Array a = createArray(connection_, "INTEGER", ia);
 
             //call proc to revers 4 elements in array
@@ -10072,10 +10072,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Long[] ia = new Long[4];
-            ia[0] = new Long( 0);
+            ia[0] = Long.valueOf( 0);
             ia[1] = null;
-            ia[2] = new Long( 200);
-            ia[3] = new Long( 300);
+            ia[2] = Long.valueOf( 200);
+            ia[3] = Long.valueOf( 300);
             java.sql.Array a = createArray(connection_, "BIGINT", ia);
 
             //call proc to revers 4 elements in array
@@ -10124,9 +10124,9 @@ public class JDCSSetArray extends JDCSSetTestcase
             ////////create array and set/get data
             Float[] ia = new Float[4];
             ia[0] = null;
-            ia[1] = new Float((float)100.1);
-            ia[2] = new Float((float)200.2);
-            ia[3] = new Float((float)300.3);
+            ia[1] = Float.valueOf((float)100.1);
+            ia[2] = Float.valueOf((float)200.2);
+            ia[3] = Float.valueOf((float)300.3);
             //???real is valid??(it is a i5 type, but luw does not seem to like it)
             //C.createArrayOf("REAL) returns "INTEGER" as type flag (no big deal)
             //but when selected, the type is "REAL"   probably luw bug
@@ -10178,9 +10178,9 @@ public class JDCSSetArray extends JDCSSetTestcase
             ////////create array and set/get data
             Double[] ia = new Double[4];
             ia[0] = null;
-            ia[1] = new Double((double)((float)100.1));
-            ia[2] = new Double((double)((float)200.2));
-            ia[3] = new Double((double)((float)300.3));
+            ia[1] = Double.valueOf((double)((float)100.1));
+            ia[2] = Double.valueOf((double)((float)200.2));
+            ia[3] = Double.valueOf((double)((float)300.3));
             java.sql.Array a;
 	    String baseTypeName = "FLOAT";
 	    if (getDriver() == JDTestDriver.DRIVER_JCC) {
@@ -10241,9 +10241,9 @@ public class JDCSSetArray extends JDCSSetTestcase
 
             ////////create array and set/get data
             Double[] ia = new Double[4];
-            ia[0] = new Double(0);
-            ia[1] = new Double(100.1);
-            ia[2] = new Double(200.2);
+            ia[0] = Double.valueOf(0);
+            ia[1] = Double.valueOf(100.1);
+            ia[2] = Double.valueOf(200.2);
             ia[3] = null;
             java.sql.Array a = createArray(connection_, "DOUBLE", ia);
 
@@ -12635,7 +12635,7 @@ public class JDCSSetArray extends JDCSSetTestcase
 		Integer[] intArray =  (Integer[]) ia;
 		ia = new Short[intArray.length];
 		for (int i = 0; i < intArray.length; i++) {
-		    ia[i] = new Short(intArray[i].shortValue());
+		    ia[i] = Short.valueOf(intArray[i].shortValue());
 		}
 
 	    } else {
@@ -13979,17 +13979,17 @@ public class JDCSSetArray extends JDCSSetTestcase
             reconnect();
             ////////create array and set/get data
             Integer[] ia1 = new Integer[4];
-            ia1[0] = new Integer( 0);
-            ia1[1] = new Integer(1);
-            ia1[2] = new Integer(2);
-            ia1[3] = new Integer(3);
+            ia1[0] = Integer.valueOf( 0);
+            ia1[1] = Integer.valueOf(1);
+            ia1[2] = Integer.valueOf(2);
+            ia1[3] = Integer.valueOf(3);
             java.sql.Array a1 = createArray(connection_, "INTEGER", ia1);
 
             Integer[] ia2 = new Integer[4];
-            ia2[0] = new Integer( 0);
-            ia2[1] = new Integer(100);
-            ia2[2] = new Integer(200);
-            ia2[3] = new Integer(300);
+            ia2[0] = Integer.valueOf( 0);
+            ia2[1] = Integer.valueOf(100);
+            ia2[2] = Integer.valueOf(200);
+            ia2[3] = Integer.valueOf(300);
             java.sql.Array a2 = createArray(connection_, "INTEGER", ia2);
 
             //call proc   (in array, in int, inout array, inout int, out array, out int)
@@ -14084,7 +14084,7 @@ public class JDCSSetArray extends JDCSSetTestcase
           // check local copy of array and arrayResultSet
           ia = new Integer[101];
           for (int i = 0; i < ia.length; i++) {
-            ia[i] = new Integer(i);
+            ia[i] = Integer.valueOf(i);
           }
           a = createArray(connection_, "INTEGER", ia);
 
@@ -14105,7 +14105,7 @@ public class JDCSSetArray extends JDCSSetTestcase
 
           ia = new Integer[5];
           for (int i = 0; i < ia.length; i++) {
-            ia[i] = new Integer(i);
+            ia[i] = Integer.valueOf(i);
           }
           a = createArray(connection_, "INTEGER", ia);
 
@@ -14130,7 +14130,7 @@ public class JDCSSetArray extends JDCSSetTestcase
 
           ia = new Integer[100];
           for (int i = 0; i < ia.length; i++) {
-            ia[i] = new Integer(i);
+            ia[i] = Integer.valueOf(i);
           }
 
           a = createArray(connection_, "INTEGER", ia);
@@ -14182,7 +14182,7 @@ public class JDCSSetArray extends JDCSSetTestcase
           // check local copy of array and arrayResultSet
           ia = new Integer[101];
           for (int i = 0; i < ia.length; i++) {
-            ia[i] = new Integer(i);
+            ia[i] = Integer.valueOf(i);
           }
           a = createArray(connection_, "INTEGER", ia);
 
@@ -14203,7 +14203,7 @@ public class JDCSSetArray extends JDCSSetTestcase
 
           ia = new Integer[5];
           for (int i = 0; i < ia.length; i++) {
-            ia[i] = new Integer(i);
+            ia[i] = Integer.valueOf(i);
           }
           a = createArray(connection_, "INTEGER", ia);
 
@@ -14228,7 +14228,7 @@ public class JDCSSetArray extends JDCSSetTestcase
 
           ia = new Integer[100];
           for (int i = 0; i < ia.length; i++) {
-            ia[i] = new Integer(i);
+            ia[i] = Integer.valueOf(i);
           }
 
           a = createArray(connection_, "INTEGER", ia);
@@ -14461,10 +14461,10 @@ public class JDCSSetArray extends JDCSSetTestcase
 
         //////// create array and set/get data
         Boolean[] ia = new Boolean[4];
-        ia[0] = new Boolean(true);
-        ia[1] = new Boolean(false);
-        ia[2] = new Boolean(false);
-        ia[3] = new Boolean(true);
+        ia[0] = Boolean.valueOf(true);
+        ia[1] = Boolean.valueOf(false);
+        ia[2] = Boolean.valueOf(false);
+        ia[3] = Boolean.valueOf(true);
 
         java.sql.Array a = createArray(connection_, "BOOLEAN", ia);
 
@@ -14915,7 +14915,7 @@ public class JDCSSetArray extends JDCSSetTestcase
             out.next();
             outArray[x] = out.getObject(2);
 	    if (outArray[x] instanceof Short) {
-		outArray[x] = new Integer(((Short)outArray[x]).intValue());
+		outArray[x] = Integer.valueOf(((Short)outArray[x]).intValue());
 	    }
         }
         if(out.next()) {
