@@ -162,7 +162,7 @@ specified.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_INTEGER, C_SMALLINT, C_VARCHAR_50) VALUES (?, ?, ?)");
-         ps.setObject (100, new Integer (4), Types.INTEGER);
+         ps.setObject (100, Integer.valueOf(4), Types.INTEGER);
          ps.close ();
          failed ("Didn't throw SQLException");
       } catch (Exception e) {
@@ -290,7 +290,7 @@ setObject() - Should throw exception when the type is invalid.
 	      PreparedStatement ps = connection_.prepareStatement (
 								   "INSERT INTO " + JDPSTest.PSTEST_SET
 								   + " (C_INTEGER, C_SMALLINT, C_VARCHAR_50) VALUES (?, ?, ?)");
-	      ps.setObject (1, new Integer (4), 4848484);
+	      ps.setObject (1, Integer.valueOf(4), 4848484);
 	      failed ("Didn't throw SQLException for invalid type of "+4848484);
 */ 
 	  }
@@ -310,7 +310,7 @@ not an input parameter.
       try {
          PreparedStatement ps = connection_.prepareStatement (
                                                              "CALL " + JDSetupProcedure.STP_CSPARMS + " (?, ?, ?)");
-         ps.setObject (2, new Integer (3), Types.INTEGER);
+         ps.setObject (2, Integer.valueOf(3), Types.INTEGER);
          ps.close ();
          failed ("Didn't throw SQLException");
       } catch (Exception e) {
@@ -351,7 +351,7 @@ setObject() - Set a SMALLINT parameter.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_SMALLINT) VALUES (?)");
-         ps.setObject (1, new Short ((short) -33), Types.SMALLINT);
+         ps.setObject (1, Short.valueOf((short) -33), Types.SMALLINT);
          ps.executeUpdate ();
          ps.close ();
 
@@ -405,7 +405,7 @@ This is ok.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_SMALLINT) VALUES (?)");
-            ps.setObject (1, new Float (-33.3f), Types.SMALLINT);
+            ps.setObject (1, Float.valueOf(-33.3f), Types.SMALLINT);
             ps.executeUpdate ();
             ps.close ();
 
@@ -454,7 +454,7 @@ setObject() - Set a SMALLINT parameter, when the type is invalid.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_SMALLINT) VALUES (?)");
-         ps.setObject (1, new Short ((short) -33), Types.NULL);
+         ps.setObject (1, Short.valueOf((short) -33), Types.NULL);
          ps.executeUpdate ();
          ps.close ();
 
@@ -482,7 +482,7 @@ setObject() - Set an INTEGER parameter.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_INTEGER) VALUES (?)");
-         ps.setObject (1, new Integer (9595), Types.INTEGER);
+         ps.setObject (1, Integer.valueOf(9595), Types.INTEGER);
          ps.executeUpdate ();
          ps.close ();
 
@@ -533,7 +533,7 @@ This is ok.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_INTEGER) VALUES (?)");
-            ps.setObject (1, new Float (-33.3f), Types.INTEGER);
+            ps.setObject (1, Float.valueOf(-33.3f), Types.INTEGER);
             ps.executeUpdate ();
             ps.close ();
 
@@ -582,7 +582,7 @@ setObject() - Set an INTEGER parameter, when the type is invalid.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_INTEGER) VALUES (?)");
-         ps.setObject (1, new Integer (9595), Types.DATE);
+         ps.setObject (1, Integer.valueOf(9595), Types.DATE);
          ps.executeUpdate ();
          ps.close ();
 
@@ -610,7 +610,7 @@ setObject() - Set an REAL parameter.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_REAL) VALUES (?)");
-         ps.setObject (1, new Float (4.325), Types.REAL);
+         ps.setObject (1, Float.valueOf(4.325f), Types.REAL);
          ps.executeUpdate ();
          ps.close ();
 
@@ -658,7 +658,7 @@ setObject() - Set a REAL parameter, when the type is invalid.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_REAL) VALUES (?)");
-         ps.setObject (1, new Float (4.325), Types.VARCHAR);
+         ps.setObject (1, Float.valueOf(4.325f), Types.VARCHAR);
          ps.executeUpdate ();
          ps.close ();
 
@@ -686,7 +686,7 @@ setObject() - Set an FLOAT parameter.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_FLOAT) VALUES (?)");
-         ps.setObject (1, new Float (-34.2), Types.DOUBLE);
+         ps.setObject (1, Float.valueOf(-34.2f), Types.DOUBLE);
          ps.executeUpdate ();
          ps.close ();
 
@@ -734,7 +734,7 @@ setObject() - Set a FLOAT parameter, when the object is the wrong type.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_FLOAT) VALUES (?)");
-         ps.setObject (1, new Float (-34.2), Types.DATE);
+         ps.setObject (1, Float.valueOf(-34.2f), Types.DATE);
          ps.executeUpdate ();
          ps.close ();
 
@@ -762,7 +762,7 @@ setObject() - Set an DOUBLE parameter.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_DOUBLE) VALUES (?)");
-         ps.setObject (1, new Double (3.14159), Types.DOUBLE);
+         ps.setObject (1, Double.valueOf(3.14159), Types.DOUBLE);
          ps.executeUpdate ();
          ps.close ();
 
@@ -810,7 +810,7 @@ setObject() - Set a DOUBLE parameter, when the type is invalid.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_DOUBLE) VALUES (?)");
-         ps.setObject (1, new Double (3.14159), Types.BINARY);
+         ps.setObject (1, Double.valueOf(3.14159), Types.BINARY);
          ps.executeUpdate ();
          ps.close ();
 
@@ -1343,7 +1343,7 @@ setObject() - Set a CLOB parameter, when the object is the wrong type.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_CLOB) VALUES (?)");
-            ps.setObject (1, new Short ((short) 3342), Types.CLOB);
+            ps.setObject (1, Short.valueOf((short) 3342), Types.CLOB);
             failed ("Didn't throw SQLException");
          } catch (Exception e) {
             assertExceptionIsInstanceOf (e, "java.sql.SQLException");
@@ -1365,7 +1365,7 @@ setObject() - Set a CLOB parameter, when the object is the wrong type.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_CLOB) VALUES (?)");
-            ps.setObject (1, new Integer (5), Types.NUMERIC);
+            ps.setObject (1, Integer.valueOf(5), Types.NUMERIC);
             failed ("Didn't throw SQLException");
          } catch (Exception e) {
             assertExceptionIsInstanceOf (e, "java.sql.SQLException");
@@ -1420,7 +1420,7 @@ setObject() - Set a DBCLOB parameter, when the object is the wrong type.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_DBCLOB) VALUES (?)");
-            ps.setObject (1, new Long (34242), Types.CLOB);
+            ps.setObject (1, Long.valueOf(34242), Types.CLOB);
             failed ("Didn't throw SQLException");
          } catch (Exception e) {
             assertExceptionIsInstanceOf (e, "java.sql.SQLException");
@@ -1442,7 +1442,7 @@ setObject() - Set a DBCLOB parameter, when the type is invalid.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_DBCLOB) VALUES (?)");
-            ps.setObject (1, new Float (4.33), Types.VARCHAR);
+            ps.setObject (1, Float.valueOf(4.33f), Types.VARCHAR);
             failed ("Didn't throw SQLException");
          } catch (Exception e) {
             assertExceptionIsInstanceOf (e, "java.sql.SQLException");
@@ -1622,7 +1622,7 @@ setObject() - Set a VARBINARY parameter, when the object is the wrong type.
          PreparedStatement ps = connection_.prepareStatement (
                                                              "INSERT INTO " + JDPSTest.PSTEST_SET
                                                              + " (C_VARBINARY_20) VALUES (?)");
-         ps.setObject (1, new Double (34.23), Types.VARBINARY);
+         ps.setObject (1, Double.valueOf(34.23), Types.VARBINARY);
          failed ("Didn't throw SQLException");
       } catch (Exception e) {
          assertExceptionIsInstanceOf (e, "java.sql.SQLException");
@@ -1998,7 +1998,7 @@ setObject() - Set a DATALINK parameter, when the object is the wrong type.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_DATALINK) VALUES (DLVALUE( CAST(? AS CHAR(20))))");
-            ps.setObject (1, new Integer(8), Types.INTEGER);
+            ps.setObject (1, Integer.valueOf(8), Types.INTEGER);
             assertCondition(true);
          } catch (Exception e) {
             failed (e, "Unexpected Exception");
@@ -2040,7 +2040,7 @@ setObject() - Set a DISTINCT parameter.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_DISTINCT) VALUES (?)");
-            ps.setObject (1, new Integer (-412), Types.INTEGER);
+            ps.setObject (1, Integer.valueOf(-412), Types.INTEGER);
             ps.executeUpdate ();
             ps.close ();
 
@@ -2118,7 +2118,7 @@ setObject() - Set a BIGINT parameter.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_BIGINT) VALUES (?)");
-            ps.setObject (1, new Long (959543224556l), Types.BIGINT);
+            ps.setObject (1, Long.valueOf(959543224556l), Types.BIGINT);
             ps.executeUpdate ();
             ps.close ();
 
@@ -2149,7 +2149,7 @@ cause a data truncation exception.
             PreparedStatement ps = connection_.prepareStatement (
                 "INSERT INTO " + JDPSTest.PSTEST_SET
                 + " (C_BIGINT) VALUES (?)");
-            ps.setObject (1, new Float(-92233720368547758099.0f), Types.BIGINT);
+            ps.setObject (1, Float.valueOf(-92233720368547758099.0f), Types.BIGINT);
             failed ("Didn't throw SQLException");
         }
         catch (Exception e) {
@@ -2175,7 +2175,7 @@ This is ok.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_BIGINT) VALUES (?)");
-            ps.setObject (1, new Float (-33.3f), Types.BIGINT);
+            ps.setObject (1, Float.valueOf(-33.3f), Types.BIGINT);
             ps.executeUpdate ();
             ps.close ();
 
@@ -2227,7 +2227,7 @@ setObject() - Set a BIGINT parameter, when the type is invalid.
             PreparedStatement ps = connection_.prepareStatement (
                                                                 "INSERT INTO " + JDPSTest.PSTEST_SET
                                                                 + " (C_BIGINT) VALUES (?)");
-            ps.setObject (1, new Long (959543224556l), Types.VARCHAR);
+            ps.setObject (1, Long.valueOf(959543224556l), Types.VARCHAR);
             ps.executeUpdate ();
             ps.close ();
 
@@ -2408,19 +2408,19 @@ SQL400 - Not run through the Toolbox as I don't think they make this work.
                     PreparedStatement ps = conn.prepareStatement("INSERT INTO " + JDPSTest.PSTEST_SET 
                             + " (C_CHAR_50, C_VARCHAR_50, C_LONGVARCHAR_257, C_GRAPHIC_10, C_VARGRAPHIC_10, C_LONGVARGRAPHIC_257  ) " +
                                     " VALUES (?, ?, ?, ?, ?, ?)");
-                    ps.setObject(1, new Boolean(true), Types.BOOLEAN);
-                    ps.setObject(2, new Boolean(true), Types.BOOLEAN);
-                    ps.setObject(3, new Boolean(true), Types.BOOLEAN);                                     
-                    ps.setObject(4, new Boolean(true), Types.BOOLEAN);
-                    ps.setObject(5, new Boolean(true), Types.BOOLEAN);
-                    ps.setObject(6, new Boolean(true), Types.BOOLEAN);
+                    ps.setObject(1, Boolean.valueOf(true), Types.BOOLEAN);
+                    ps.setObject(2, Boolean.valueOf(true), Types.BOOLEAN);
+                    ps.setObject(3, Boolean.valueOf(true), Types.BOOLEAN);                                     
+                    ps.setObject(4, Boolean.valueOf(true), Types.BOOLEAN);
+                    ps.setObject(5, Boolean.valueOf(true), Types.BOOLEAN);
+                    ps.setObject(6, Boolean.valueOf(true), Types.BOOLEAN);
                     ps.executeUpdate();
-                    ps.setObject(1, new Boolean(false), Types.BOOLEAN);
-                    ps.setObject(2, new Boolean(false), Types.BOOLEAN);
-                    ps.setObject(3, new Boolean(false), Types.BOOLEAN);
-                    ps.setObject(4, new Boolean(false), Types.BOOLEAN);
-                    ps.setObject(5, new Boolean(false), Types.BOOLEAN);
-                    ps.setObject(6, new Boolean(false), Types.BOOLEAN);
+                    ps.setObject(1, Boolean.valueOf(false), Types.BOOLEAN);
+                    ps.setObject(2, Boolean.valueOf(false), Types.BOOLEAN);
+                    ps.setObject(3, Boolean.valueOf(false), Types.BOOLEAN);
+                    ps.setObject(4, Boolean.valueOf(false), Types.BOOLEAN);
+                    ps.setObject(5, Boolean.valueOf(false), Types.BOOLEAN);
+                    ps.setObject(6, Boolean.valueOf(false), Types.BOOLEAN);
 
                     ps.executeUpdate();
 
@@ -2432,9 +2432,9 @@ SQL400 - Not run through the Toolbox as I don't think they make this work.
                         String retVal = rs.getString("C_CHAR_50").trim();
                         String retVal2 = rs.getString("C_VARCHAR_50");
                         String retVal3 = rs.getString("C_LONGVARCHAR_257");
-                        Boolean retValB4 = new Boolean(rs.getBoolean("C_GRAPHIC_10"));
-                        Boolean retValB5 = new Boolean(rs.getBoolean("C_VARGRAPHIC_10"));
-                        Boolean retValB6 = new Boolean(rs.getBoolean("C_LONGVARGRAPHIC_257"));
+                        Boolean retValB4 = Boolean.valueOf(rs.getBoolean("C_GRAPHIC_10"));
+                        Boolean retValB5 = Boolean.valueOf(rs.getBoolean("C_VARGRAPHIC_10"));
+                        Boolean retValB6 = Boolean.valueOf(rs.getBoolean("C_LONGVARGRAPHIC_257"));
                         if ( ((retVal.equals( falseString ) == false) && (retVal.equals( trueString ) == false))
                                 || ((retVal2.equals( falseString ) == false) && (retVal2.equals( trueString ) == false))
                                 || ((retVal3.equals( falseString ) == false) && (retVal3.equals( trueString ) == false))) {
@@ -2950,13 +2950,13 @@ setParameterTest () - Set the specified parameter using an object.
 
   public void Var100() {
     if (checkBooleanSupport()) {
-      setParameterTest("C_BOOLEAN", new Boolean(true), Types.BOOLEAN, "1");
+      setParameterTest("C_BOOLEAN", Boolean.valueOf(true), Types.BOOLEAN, "1");
     }
   }
 
   public void Var101() {
     if (checkBooleanSupport()) {
-      setParameterTest("C_BOOLEAN", new Boolean(false),Types.BOOLEAN, "0");
+      setParameterTest("C_BOOLEAN", Boolean.valueOf(false),Types.BOOLEAN, "0");
     }
   }
 
@@ -2974,13 +2974,13 @@ setParameterTest () - Set the specified parameter using an object.
 
   public void Var104() {
     if (checkBooleanSupport()) {
-      setParameterTest("C_BOOLEAN", new Integer(100),Types.BOOLEAN, "1");
+      setParameterTest("C_BOOLEAN", Integer.valueOf(100),Types.BOOLEAN, "1");
     }
   }
 
   public void Var105() {
     if (checkBooleanSupport()) {
-      setParameterTest("C_BOOLEAN", new Integer(0),Types.BOOLEAN, "0");
+      setParameterTest("C_BOOLEAN", Integer.valueOf(0),Types.BOOLEAN, "0");
     }
   }
 
